get data from sqm

--- a/MortgageAnalysis/sample.ipynb
+++ b/MortgageAnalysis/sample.ipynb
@@ -4051,22 +4051,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "# Send a GET request to the webpage\n",
+    "rent_url = 'https://sqmresearch.com.au/weekly-rents.php?postcode=4509&t=1'\n",
+    "response = requests.get(rent_url)\n",
+    "\n",
+    "# Check if the request was successful\n",
+    "if response.status_code == 200:\n",
+    "    # Parse the HTML content using BeautifulSoup\n",
+    "    soup = BeautifulSoup(response.content, 'html.parser')\n",
+    "    \n",
+    "    # Find the table containing the rent data\n",
+    "    table = soup.find('div', class_='changetable')\n",
+    "    data_text = []\n",
+    "    if table:\n",
+    "        # Extract rows from the table\n",
+    "        rows = table.find_all('tr')\n",
+    "        \n",
+    "        # Assume the first row contains headers and skip it\n",
+    "        for row in rows[1:]:\n",
+    "            # Extract columns from each row\n",
+    "            columns = row.find_all('td')\n",
+    "            for col in columns:\n",
+    "                data = col.get_text(strip=True)\n",
+    "                data_text.append(data)\n",
+    "            \n",
+    "else:\n",
+    "    print(\"Error fetching the webpage.\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "annual_change_rent = data_text[-1]\n",
+    "current_weekly_rents = float(data_text[-8])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3.527849019434133"
+       "629.44"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "1.1*pow(1.06,20)"
+    "current_weekly_rents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://sqmresearch.com.au/weekly-rents.php?postcode=4509&t=1'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "base_url='https://sqmresearch.com.au'\n",
+    "rent_url = base_url+'/weekly-rents.php?postcode=4509&t=1'\n",
+    "rent_url\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils import get_postcode_data\n",
+    "x= get_postcode_data(9999)\n",
+    "x['rent'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x['rent'][1]"
    ]
   },
   {
